objects/Project_Invoice__c.object
<CustomObject>
    <description>Represents the invoice generated for the Time &amp; Expenses of a Project.</description>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify the Account to which this invoice belongs. By default, it is same as the Project.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Requests</relationshipLabel>
        <relationshipName>R00N20000001RCWmEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreed_Product_Price_Product__c</fullName>
        <formula>Project__r.Agreed_Project_Price_Product__c</formula>
        <label>Agreed Product Price (Product)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Product_Price_Total__c</fullName>
        <formula>Project__r.Agreed_Project_Price_Total__c</formula>
        <label>Agreed Product Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Project_Price_PS__c</fullName>
        <formula>Project__r.Agreed_Project_Price_PS__c</formula>
        <label>Agreed Project Price (PS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Project_Price_SPS__c</fullName>
        <formula>Project__r.Agreed_Project_Price_SPS__c</formula>
        <label>Agreed Project Price (SPS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Project_Price_TS__c</fullName>
        <formula>Project__r.Agreed_Project_Price_TS__c</formula>
        <label>Agreed Project Price (TS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <formula>Approved_Time_Amount__c +  Approved_Expenses_Amount__c +  Approved_CB_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the user who approved this invoice</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_CB_Expenses__c</fullName>
        <label>Approved CB Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Expenses_Amount__c</fullName>
        <label>Approved Rechargeable Expenses Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_On__c</fullName>
        <description>The date time when the invoice is approved</description>
        <formula>Date_Processed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_Time_Amount__c</fullName>
        <label>Approved Time Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingScheduleTotal__c</fullName>
        <formula>Project__r.RevenueOld__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Schedule Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Registration_Number__c</fullName>
        <formula>Billing_Contact__r.Registration_Number__c</formula>
        <label>Billing Contact Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoice Requests (Billing Contact)</relationshipLabel>
        <relationshipName>R00N20000001RCX5EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>The text entered here will be printed on the invoice.</inlineHelpText>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify the Contact to which this invoice belongs. By default, it is same as the Project.</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Contact with this name either does not exist or does not belong to the selected Account.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoice Requests</relationshipLabel>
        <relationshipName>R00N20000001RCX0EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Registration_Number__c</fullName>
        <formula>Contact_Name__r.Registration_Number__c</formula>
        <label>Contact Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Reason_code__c</fullName>
        <label>Credit Note Reason code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SO1 Goods returned</fullName>
                </value>
                <value>
                    <fullName>SO2 Price adjustment</fullName>
                </value>
                <value>
                    <fullName>SO3 Units adjustment</fullName>
                </value>
                <value>
                    <fullName>SO4 Client Order Error</fullName>
                </value>
                <value>
                    <fullName>SO5 - SOE Operator Error</fullName>
                </value>
                <value>
                    <fullName>SO6 Lease/Licence not renewed</fullName>
                </value>
                <value>
                    <fullName>SO7 Client Cancelled training delegate</fullName>
                </value>
                <value>
                    <fullName>SO8 SHL cancelled course</fullName>
                </value>
                <value>
                    <fullName>SO9 Good will gesture</fullName>
                </value>
                <value>
                    <fullName>SO10 Incorrect address</fullName>
                </value>
                <value>
                    <fullName>SO11 System Error</fullName>
                </value>
                <value>
                    <fullName>SO12 IRF Requestor Error</fullName>
                </value>
                <value>
                    <fullName>SO14 - Training Operator Error</fullName>
                </value>
                <value>
                    <fullName>SO13 - Client Support Operator Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Note_Reason_explanation__c</fullName>
        <label>Credit Note Reason explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All values for credit notes must be entered as negative values in the ‘Amount to be invoiced’ fields below.
Enter the PO Number of the Invoice Request to be credited in the PO Number field above.</inlineHelpText>
        <label>Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D_Number__c</fullName>
        <formula>Account__r.Account_Number__c</formula>
        <label>D-Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Processed__c</fullName>
        <label>Date Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dept_Code__c</fullName>
        <label>Dept. Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LBU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DLYLOCL - Professional Services Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dept_Name__c</fullName>
        <label>Dept. Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dept 1</fullName>
                </value>
                <value>
                    <fullName>Dept 2</fullName>
                </value>
                <value>
                    <fullName>Dept 3</fullName>
                </value>
                <value>
                    <fullName>Dept 4</fullName>
                </value>
                <value>
                    <fullName>Dept 5</fullName>
                </value>
                <value>
                    <fullName>Dept 6</fullName>
                </value>
                <value>
                    <fullName>Dept 7</fullName>
                </value>
                <value>
                    <fullName>Dept 8</fullName>
                </value>
                <value>
                    <fullName>Dept 9</fullName>
                </value>
                <value>
                    <fullName>Dept 10</fullName>
                </value>
                <value>
                    <fullName>Dept 11</fullName>
                </value>
                <value>
                    <fullName>Dept 12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountTotal__c</fullName>
        <formula>IM1_Discount__c  +  IM2_Discount__c  +  IM3_Discount__c  +  IM4_Discount__c  +  IM5_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <inlineHelpText>Please enter a specific discount amount.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <inlineHelpText>Please enter the dscount percent.</inlineHelpText>
        <label>Discount %</label>
        <precision>8</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Select the End Date upto which the amount to be billed is calculated</inlineHelpText>
        <label>Invoice End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expenses_Total__c</fullName>
        <description>Expenses total would be calculated on basis of as IM lookup code is selected as Expense recharge.</description>
        <formula>if(ISPICKVAL(IM1_LookupCode__c ,&quot;EXPENSE RECHARGE&quot;),TotalAmount_IM1__c,0)+
if(ISPICKVAL(IM2_LookupCode__c , &quot;EXPENSE RECHARGE&quot;),TotalAmount_IM2__c,0)+
if(ISPICKVAL(IM3_LookupCode__c , &quot;EXPENSE RECHARGE&quot;),TotalAmount_IM3__c,0)+
if(ISPICKVAL(IM4_LookupCode__c , &quot;EXPENSE RECHARGE&quot;),TotalAmount_IM4__c,0)+
if(ISPICKVAL(IM5_LookupCode__c , &quot;EXPENSE RECHARGE&quot;),TotalAmount_IM5__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expenses Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Amount__c</fullName>
        <label>Agreed Project Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PS;PSTC</fullName>
                </value>
                <value>
                    <fullName>PSTC</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSSC_Instructions__c</fullName>
        <label>Invoicing Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IM1_Discount__c</fullName>
        <label>Discount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IM1_LookupCode__c</fullName>
        <label>IM Lookup Code 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Function__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1:1 DELIVERY</fullName>
                </value>
                <value>
                    <fullName>1:1 DESIGN</fullName>
                </value>
                <value>
                    <fullName>1:1 FEEDBACK</fullName>
                </value>
                <value>
                    <fullName>1:1 MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-DEV</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-PRF</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-SEL</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-SUC</fullName>
                </value>
                <value>
                    <fullName>CANCELCHARGEA</fullName>
                </value>
                <value>
                    <fullName>COACHING</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-DEV</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-PRF</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-SEL</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-SUC</fullName>
                </value>
                <value>
                    <fullName>CONSULT-SERV</fullName>
                </value>
                <value>
                    <fullName>CSTRP1REBRAND</fullName>
                </value>
                <value>
                    <fullName>CSTRP2RENAMEUCF</fullName>
                </value>
                <value>
                    <fullName>CSTRP3CUSTCOMP</fullName>
                </value>
                <value>
                    <fullName>DEV-PROJ-DESIGN</fullName>
                </value>
                <value>
                    <fullName>DEV-PROJ-MGMT</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-DEV</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-PRF</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-SEL</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-SUC</fullName>
                </value>
                <value>
                    <fullName>EXPENSE RECHARGE</fullName>
                </value>
                <value>
                    <fullName>GRP-ASSESS-DES</fullName>
                </value>
                <value>
                    <fullName>GRP-ASSESS-DLVY</fullName>
                </value>
                <value>
                    <fullName>GRP-ASSESS-FDBK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IM1_Quantity__c</fullName>
        <label>Quantity1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM1_UnitPrice__c</fullName>
        <inlineHelpText>For PS consulting enter the ‘daily consulting rate’ unit price. For Expense recharge enter the total amount to be recharged</inlineHelpText>
        <label>Unit Price 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IM2_Discount__c</fullName>
        <label>Discount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IM2_LookupCode__c</fullName>
        <label>IM Lookup Code 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Function__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1:1 DELIVERY</fullName>
                </value>
                <value>
                    <fullName>1:1 DESIGN</fullName>
                </value>
                <value>
                    <fullName>1:1 FEEDBACK</fullName>
                </value>
                <value>
                    <fullName>1:1 MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-DEV</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-PRF</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-SEL</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-SUC</fullName>
                </value>
                <value>
                    <fullName>CANCELCHARGEA</fullName>
                </value>
                <value>
                    <fullName>COACHING</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-DEV</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-PRF</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-SEL</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-SUC</fullName>
                </value>
                <value>
                    <fullName>CONSULT-SERV</fullName>
                </value>
                <value>
                    <fullName>CSTRP1REBRAND</fullName>
                </value>
                <value>
                    <fullName>CSTRP2RENAMEUCF</fullName>
                </value>
                <value>
                    <fullName>CSTRP3CUSTCOMP</fullName>
                </value>
                <value>
                    <fullName>DEV-PROJ-DESIGN</fullName>
                </value>
                <value>
                    <fullName>DEV-PROJ-MGMT</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-DEV</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-PRF</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-SEL</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-SUC</fullName>
                </value>
                <value>
                    <fullName>EXPENSE RECHARGE</fullName>
                </value>
                <value>
                    <fullName>GRP-ASSESS-DES</fullName>
                </value>
                <value>
                    <fullName>GRP-ASSESS-DLVY</fullName>
                </value>
                <value>
                    <fullName>GRP-ASSESS-FDBK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IM2_Quantity__c</fullName>
        <label>Quantity2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM2_UnitPrice__c</fullName>
        <inlineHelpText>For PS consulting enter the ‘daily consulting rate’ unit price. For Expense recharge enter the total amount to be recharged</inlineHelpText>
        <label>Unit Price 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IM3_Discount__c</fullName>
        <label>Discount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IM3_LookupCode__c</fullName>
        <label>IM Lookup Code 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Function__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1:1 DELIVERY</fullName>
                </value>
                <value>
                    <fullName>1:1 DESIGN</fullName>
                </value>
                <value>
                    <fullName>1:1 FEEDBACK</fullName>
                </value>
                <value>
                    <fullName>1:1 MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-DEV</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-PRF</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-SEL</fullName>
                </value>
                <value>
                    <fullName>ASSESSCENTR-SUC</fullName>
                </value>
                <value>
                    <fullName>CANCELCHARGEA</fullName>
                </value>
                <value>
                    <fullName>COACHING</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-DEV</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-PRF</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-SEL</fullName>
                </value>
                <value>
                    <fullName>COMPMODEL-SUC</fullName>
                </value>
                <value>
                    <fullName>CONSULT-SERV</fullName>
                </value>
                <value>
                    <fullName>CSTRP1REBRAND</fullName>
                </value>
                <value>
                    <fullName>CSTRP2RENAMEUCF</fullName>
                </value>
                <value>
                    <fullName>CSTRP3CUSTCOMP</fullName>
                </value>
                <value>
                    <fullName>DEV-PROJ-DESIGN</fullName>
                </value>
                <value>
                    <fullName>DEV-PROJ-MGMT</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-DEV</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-PRF</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-SEL</fullName>
                </value>
                <value>
                    <fullName>EXECPWRONE-SUC</fullName>
                </value>
                <value>
                    <fullName>EXPENSE RECHARGE</fullName>
                </value>
                <value>
                    <fullName>GRP-ASSESS-DES</fullName>
                </value>
                <value>
                    <fullName>GRP-ASSESS-DLVY</fullName>
                </value>
                <value>
                    <fullName>GRP-ASSESS-FDBK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IM3_Quantity__c</fullName>
        <label>Quantity3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IM3_UnitPrice__c</fullName>
        <inlineHelpText>For PS consulting enter the ‘daily consulting rate’ unit price. For Expense recharge enter the total amount to be recharged</inlineHelpText>
        <label>Unit Price 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inter_company_request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inter company request</description>
        <label>Inter company request ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intercompany_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intercompany Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intercompany_Pre_Approval_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Pre Approval Code</label>
        <referenceTo>Associate__c</referenceTo>
        <relationshipLabel>Invoice Requests</relationshipLabel>
        <relationshipName>Invoice_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <label>Invoice Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Header_Reference__c</fullName>
        <label>Invoice Header Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Language__c</fullName>
        <label>Invoice Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Swiss</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Look_Up_Code__c</fullName>
        <label>Invoice Look-Up Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoiced_Amount__c</fullName>
        <label>Invoiced Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoicingTotal__c</fullName>
        <formula>ROUND(Total_Expense_Recharge__c,2) +  ROUND(Total_Invoice_Amount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoicing Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Deferral_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deferral Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBU__c</fullName>
        <label>LBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD1</fullName>
                </value>
                <value>
                    <fullName>AU1</fullName>
                </value>
                <value>
                    <fullName>BE5</fullName>
                </value>
                <value>
                    <fullName>CA1</fullName>
                </value>
                <value>
                    <fullName>CH1</fullName>
                </value>
                <value>
                    <fullName>CN1</fullName>
                </value>
                <value>
                    <fullName>DE5</fullName>
                </value>
                <value>
                    <fullName>DK1</fullName>
                </value>
                <value>
                    <fullName>FI1</fullName>
                </value>
                <value>
                    <fullName>FR5</fullName>
                </value>
                <value>
                    <fullName>HK1</fullName>
                </value>
                <value>
                    <fullName>IN1</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>ME1</fullName>
                </value>
                <value>
                    <fullName>NL5</fullName>
                </value>
                <value>
                    <fullName>NO1</fullName>
                </value>
                <value>
                    <fullName>NZ1</fullName>
                </value>
                <value>
                    <fullName>PH1</fullName>
                </value>
                <value>
                    <fullName>SA5</fullName>
                </value>
                <value>
                    <fullName>SE1</fullName>
                </value>
                <value>
                    <fullName>SG1</fullName>
                </value>
                <value>
                    <fullName>UK1</fullName>
                </value>
                <value>
                    <fullName>US5</fullName>
                </value>
                <value>
                    <fullName>ZA1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>